# software-raytracer

./: .gitignore  CMakeLists.txt  main.cpp
include/: Camera.h  Cube.h  DirectionalLight.h  Plane.h  Ray.h  RayTracingRenderer.h  Shape.h  Sphere.h  main.h
src/: Cube.cpp  DirectionalLight.cpp  Plane.cpp  RayTracingRenderer.cpp  Sphere.cpp
